sideBySide spacing issue fix

--- a/_scss/components/blog.scss
+++ b/_scss/components/blog.scss
@@ -7,9 +7,7 @@
     .sideBySide {
         display: inline-block;
         width: calc(50% - .5rem);
-    }
-    .sideBySide:nth-child(even) {
-        margin-left: .5rem;
+        margin: 0 .18rem;
     }
     .sideBySide figcaption, .image figcaption { 
         display: flex; 
